Fix configuration if gobject is absent
Autodetect gobject and only use it if present.
Its absence is not to be considered a failure since it's not required.

--- a/configure.ac
+++ b/configure.ac
@@ -654,7 +654,7 @@ AC_SUBST(real_pthread_LIBS)
 dnl ===========================================================================
 dnl Build gobject integration library
 
-CAIRO_ENABLE_FUNCTIONS(gobject, gobject, yes, [
+CAIRO_ENABLE_FUNCTIONS(gobject, gobject, auto, [
   gobject_REQUIRES="gobject-2.0"
   PKG_CHECK_MODULES(gobject, $gobject_REQUIRES, , [AC_MSG_RESULT(no)
   use_gobject="no (requires $gobject_REQUIRES http://download.gnome.org/pub/GNOME/sources/glib/)"])
