gobject: Include the extra library in the pkgconfig file

--- a/configure.ac
+++ b/configure.ac
@@ -658,6 +658,7 @@ CAIRO_ENABLE_FUNCTIONS(gobject, gobject, auto, [
   gobject_REQUIRES="gobject-2.0 glib-2.0"
   PKG_CHECK_MODULES(GOBJECT, $gobject_REQUIRES, , [AC_MSG_RESULT(no)
   use_gobject="no (requires $gobject_REQUIRES http://download.gnome.org/pub/GNOME/sources/glib/)"])
+  gobject_NONPKGCONFIG_LIBS="-L\%{libdir} -lcairo-gobject"
 ])
 
 dnl ===========================================================================
