test: Add subsurface-outside-target
This test defines the behavior of subsurfaces when they are created to
be bigger than their target.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -251,6 +251,7 @@ test_sources = \
 	subsurface-pad.c                                \
 	subsurface-modify-child.c                       \
 	subsurface-modify-parent.c                      \
+	subsurface-outside-target.c                     \
 	subsurface-similar-repeat.c                     \
 	surface-finish-twice.c				\
 	surface-pattern.c				\
