--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -66,6 +66,7 @@ cairo_private = \
 	cairo-fixed-private.h \
 	cairo-fixed-type-private.h \
 	cairo-freelist-private.h \
+	cairo-freelist-type-private.h \
 	cairo-freed-pool-private.h \
 	cairo-fontconfig-private.h \
 	cairo-gstate-private.h \
