--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -138,6 +138,7 @@ REFERENCE_IMAGES = \
 	a1-rasterisation-triangles.ref.png \
 	a1-traps-sample.ref.png \
 	a1-traps-sample.quartz.xfail.png \
+	a8-clear.ref.png \
 	a8-mask.ref.png \
 	aliasing.ref.png \
 	aliasing.image16.ref.png \
