--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -5,6 +5,7 @@ test_sources = \
 	a1-mask-sample.c 				\
 	a1-traps-sample.c				\
 	a1-rasterisation.c				\
+	a8-clear.c					\
 	a8-mask.c					\
 	aliasing.c					\
 	alpha-similar.c					\
