test: Add arc-looping-dash
The handling of angles above 2pi in cairo_arc is not very solid and is
basically untested.

This test should ensure that changes in the behavior will be noticed
by the testsuite.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -154,6 +154,9 @@ REFERENCE_IMAGES = \
 	alpha-similar.svg.argb32.xfail.png \
 	alpha-similar.svg.rgb24.xfail.png \
 	api-special-cases.ref.png \
+	arc-looping-dash.image16.ref.png \
+	arc-looping-dash.ps.ref.png \
+	arc-looping-dash.ref.png \
 	big-line.ref.png \
 	big-line.image16.ref.png \
 	big-line.ps.ref.png \
