gl: Add definitions for the core variant names of used GL constants
This allows us to use the core variant of the needed GL constants regardless of the
GL header version that is being used for compilation.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -314,6 +314,7 @@ cairo_beos_cxx_sources = cairo-beos-surface.cpp
 cairo_gl_headers = cairo-gl.h
 cairo_gl_private = cairo-gl-private.h \
 		   cairo-gl-dispatch-private.h \
+		   cairo-gl-ext-def-private.h \
 		   cairo-gl-gradient-private.h \
 		   glew/GL/glew.h \
 		   glew/GL/glxew.h
