--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -717,6 +717,7 @@ REFERENCE_IMAGES = \
 	huge-linear.image16.ref.png \
 	huge-linear.pdf.ref.png \
 	huge-linear.ps3.ref.png \
+	huge-linear.quartz.ref.png \
 	huge-linear.ref.png \
 	huge-radial.image16.ref.png \
 	huge-radial.pdf.argb32.ref.png \
@@ -790,6 +791,7 @@ REFERENCE_IMAGES = \
 	linear-gradient.quartz.ref.png \
 	linear-gradient.ref.png \
 	linear-gradient.xlib.ref.png \
+	linear-gradient-large.quartz.ref.png \
 	linear-gradient-large.ref.png \
 	linear-gradient-one-stop.argb32.ref.png \
 	linear-gradient-one-stop.rgb24.ref.png \
@@ -1026,6 +1028,7 @@ REFERENCE_IMAGES = \
 	push-group-color.image16.ref.png \
 	push-group-color.quartz.ref.png \
 	push-group-color.ref.png \
+	push-group-color.ps2.ref.png \
 	push-group-color.ps3.ref.png \
 	push-group-color.xlib.ref.png \
 	quartz-surface-source.rgb24.ref.png \
@@ -1033,22 +1036,37 @@ REFERENCE_IMAGES = \
 	quartz-surface-source.ps2.ref.png \
 	quartz-surface-source.ps3.ref.png \
 	radial-gradient.image16.ref.png \
-	radial-gradient.pdf.ref.png \
+	radial-gradient.pdf.xfail.png \
+	radial-gradient.quartz.ref.png \
 	radial-gradient.ref.png \
 	radial-gradient.svg.xfail.png \
+	radial-gradient-extend.ps3.ref.png \
 	radial-gradient-extend.ref.png \
 	radial-gradient-source.image16.ref.png \
 	radial-gradient-source.argb32.ref.png \
 	radial-gradient-source.rgb24.ref.png \
-	radial-gradient-source.pdf.argb32.ref.png \
+	radial-gradient-source.pdf.argb32.xfail.png \
+	radial-gradient-source.pdf.rgb24.xfail.png \
+	radial-gradient-source.quartz.argb32.ref.png \
+	radial-gradient-source.quartz.rgb24.ref.png \
 	radial-gradient-mask.argb32.ref.png \
 	radial-gradient-mask.rgb24.ref.png \
 	radial-gradient-mask.image16.ref.png \
+	radial-gradient-mask.pdf.argb32.xfail.png \
+	radial-gradient-mask.pdf.rgb24.xfail.png \
+	radial-gradient-mask.quartz.argb32.ref.png \
+	radial-gradient-mask.quartz.rgb24.ref.png \
 	radial-gradient-mask-source.argb32.ref.png \
 	radial-gradient-mask-source.rgb24.ref.png \
 	radial-gradient-mask-source.image16.ref.png \
+	radial-gradient-mask-source.pdf.argb32.xfail.png \
+	radial-gradient-mask-source.pdf.rgb24.xfail.png \
+	radial-gradient-mask-source.quartz.argb32.ref.png \
+	radial-gradient-mask-source.quartz.rgb24.ref.png \
 	radial-gradient-one-stop.argb32.ref.png \
 	radial-gradient-one-stop.rgb24.ref.png \
+	radial-gradient-one-stop.ps3.argb32.ref.png \
+	radial-gradient-one-stop.ps3.rgb24.ref.png \
 	random-intersections-eo.image16.ref.png \
 	random-intersections-eo.ps.ref.png \
 	random-intersections-eo.quartz.ref.png \
