--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -14,6 +14,7 @@ test_sources = \
 	big-trap.c					\
 	bilevel-image.c					\
 	bug-bo-rectangular.c				\
+	bug-extents.c					\
 	bug-seams.c					\
 	caps.c						\
 	caps-joins.c					\
