test: Add bug-extents
Add a test for the computation of approximate extents used by most
backends to esimate the region affected by drawing operations.

Based on:
http://lists.cairographics.org/archives/cairo/2010-December/021331.html

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -167,6 +167,11 @@ REFERENCE_IMAGES = \
 	bug-bo-rectangular.ref.png \
 	bug-bo-rectangular.image16.ref.png \
 	bug-bo-rectangular.ps.xfail.png \
+	bug-extents.image16.ref.png \
+	bug-extents.quartz.ref.png \
+	bug-extents.ps.ref.png \
+	bug-extents.ref.png \
+	bug-extents.xlib.ref.png \
 	bug-seams.ref.png \
 	bug-seams.xlib.ref.png \
 	bug-seams.xlib-fallback.ref.png \
