test: Add tests for mesh patterns
mesh-pattern tests a mesh pattern with non-opaque two overlapping
patches.

mesh-pattern-accuracy tests the accuracy of the color computed in each
point of a patch. It can point out defects in rasterizers which rely
on mesh subdivision only use the mesh shape instead of both shape and
color to decide when the tensor-product patches can be approximated
with Gouraud-shaded triangles.

mesh-pattern-conical is an example of how a conical gradient can be
approximated with a mesh pattern.

mesh-pattern-control-points tests a mesh pattern with control points
in non-default position to verify that their position affects the
color as expected.

mesh-pattern-fold tests a mesh pattern with a patch which folds along
both sides.

mesh-pattern-overlap tests a mesh pattern with a patch which folds
along just one side.

mesh-pattern-transformed tests a mesh pattern with non-identity
transform matrix.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -853,6 +853,20 @@ REFERENCE_IMAGES = \
 	mask.svg.rgb24.xfail.png \
 	mask.xlib.ref.png \
 	mask.xlib.rgb24.ref.png \
+	mesh-pattern.image16.ref.png \
+	mesh-pattern.ref.png \
+	mesh-pattern-accuracy.image16.ref.png \
+	mesh-pattern-accuracy.ref.png \
+	mesh-pattern-conical.image16.ref.png \
+	mesh-pattern-conical.ref.png \
+	mesh-pattern-control-points.image16.ref.png \
+	mesh-pattern-control-points.ref.png \
+	mesh-pattern-fold.image16.ref.png \
+	mesh-pattern-fold.ref.png \
+	mesh-pattern-overlap.image16.ref.png \
+	mesh-pattern-overlap.ref.png \
+	mesh-pattern-transformed.image16.ref.png \
+	mesh-pattern-transformed.ref.png \
 	mime-data.pdf.ref.png \
 	mime-data.ps.ref.png \
 	mime-data.ref.png \
