Add a results.tar.gz target to the test Makefile
Sometimes it is useful to be able to package the result of a run of
the testsuite. This new target creates an archive containing the html
page and at least all the files it links to.

The archive might contain some unneeded images.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1813,6 +1813,17 @@ check-ref-missing:
 
 release-verify-sane-tests: check-ref-missing
 
+results.tar:
+	@tar cf $@ index.html testtable.js *.log; \
+	for i in output/*.fail.png ; do \
+		testname=$${i#output/} ; \
+		testname=$${testname%%.*} ; \
+		tar uf $@ $${testname}*.ref.png $${i%fail.png}out.png $${i%fail.png}diff.png ; \
+	done
+
+results.tar.gz: results.tar
+	gzip -c $< > $@
+
 .PHONY: check-valgrind test recheck retest check-ref-dups check-ref-missing release-verify-sane-tests
 
 EXTRA_DIST += Makefile.win32
