--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -124,6 +124,7 @@ test_sources = \
 	gradient-zero-stops-mask.c			\
 	group-clip.c					\
 	group-paint.c					\
+	group-state.c					\
 	group-unaligned.c				\
 	half-coverage.c					\
 	halo.c						\
